# master_rust_axum

./: .gitignore  README.md  day_1.md  day_2-7.md  project_base_learning.md
01-foundation/: ARCHITECTURE.md  ASYNC_MODEL.md  Cargo.toml  HANDLER_INTERNALS.md  PRODUCTION_MODEL.md  README.md  ROUTER_DEEP_DIVE.md  RUST_CONCEPTS.md  SETUP.md  VALIDATION_QUESTIONS.md
01-foundation/practice/: questions.md
01-foundation/project/: README.md
01-foundation/src/: handlers.rs  lib.rs  main.rs  router_builder.rs  run.rs
02-extractors/: 01_EXTRACTOR_ARCHITECTURE.md  02_BUILTIN_EXTRACTORS.md  03_ORDER_AND_FROM_REQUEST.md  05_REJECTION_AND_PRODUCTION.md  Cargo.toml  README.md
02-extractors/practice/: questions.md
02-extractors/project/: README.md
02-extractors/src/: handlers.rs  main.rs  router_builder.rs
03-responses-errors/: 01_INTO_RESPONSE.md  02_CUSTOM_RESPONSE_AND_ERRORS.md  04_REJECTION_VS_APP_ERROR.md  05_PRODUCTION_ERROR_STRATEGY.md  Cargo.toml  README.md
03-responses-errors/practice/: questions.md
03-responses-errors/project/: README.md
03-responses-errors/src/: error.rs  handlers.rs  lib.rs  main.rs  router_builder.rs  run.rs
04-state/: 01_STATE_PHILOSOPHY.md  02_STATE_EXTRACTOR_AND_ARC.md  04_MUTABLE_AND_POOL.md  Cargo.toml  README.md
04-state/practice/: questions.md
04-state/project/: README.md
04-state/src/: handlers.rs  lib.rs  main.rs  router_builder.rs  state.rs
05-middleware/: 01_TOWER_ARCHITECTURE.md  02_LAYER_SYSTEM.md  03_BUILTIN_AND_CUSTOM.md  Cargo.toml  README.md
05-middleware/practice/: questions.md
05-middleware/project/: README.md
05-middleware/src/: handlers.rs  lib.rs  main.rs  router_builder.rs
06-database/: 01_PROJECT_ARCHITECTURE.md  02_POOL_AND_TRANSACTIONS.md  04_DTO_AND_VALIDATION.md  Cargo.toml  README.md
06-database/practice/: questions.md
06-database/project/: README.md
06-database/src/: dto.rs  handlers.rs  lib.rs  main.rs  repo.rs  router_builder.rs  service.rs
07-production/: 01_TESTING.md  02_OBSERVABILITY.md  03_SHUTDOWN.md  05_SCALING.md  Cargo.toml
07-production/practice/: questions.md
07-production/project/: README.md
07-production/src/: handlers.rs  lib.rs  main.rs  router_builder.rs  tests.rs
