[package]
name = "foundation"
version = "0.1.0"
edition = "2021"
description = "Day 1 — Axum ecosystem, router, handlers, async (master-level)"

[dependencies]
axum = { version = "0.8", features = ["json", "macros", "matched-path", "original-uri", "form", "query"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
