[package]
name = "extractors"
version = "0.1.0"
edition = "2021"
description = "Day 2 — Extractors, FromRequest, FromRequestParts, rejections"

[dependencies]
axum = { version = "0.8", features = ["json", "macros", "form", "query"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
