[package]
name = "responses_errors"
version = "0.1.0"
edition = "2021"
description = "Day 3 — IntoResponse, error mapping, custom responses"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
