[package]
name = "state"
version = "0.1.0"
edition = "2021"
description = "Day 4 — State<T>, Arc, shared state, concurrency"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
