[package]
name = "database"
version = "0.1.0"
edition = "2021"
description = "Day 6 — Project layout, handler/service/repo, pool concept, DTO"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
